# alice

./: Makefile  README.md  buildall  buildfl  buildhi  buildhi.sh  buildhi_dbg.sh  buildlex  command  createfst.sh  createfsthu.sh  createlib  createlib.sh  createlib_dbg.sh  db.c  db.cpp  db.h  db_factory.h  desktop_content.sql  english.foma  english.fst  english.lexc  hi  hi.cpp  hi.cxx  hi.db  hi.fl  hi.h  hi.l  hi.tab.c  hi.tab.h  hi.y  hi_constants.h  hi_cvalue.cpp  hi_db  hi_db.sql  hi_nongen.y  hi_qt.cflags  hi_qt.cxxflags  hi_qt.files  (+49 more)
android/: MainActivity.java  android_crosscompile_steps.txt  createlib.sh  english.lexc  jsi.java
android/jni/: Android.mk
gensrc/: C_code.cpp  C_declarations.cpp  bison_declarations.cpp  build.sh  gensrc  gensrc.cpp  hi.cpp  hi.db  hi.y
hi_android/: .cproject  .project  AndroidManifest.xml  android_64bit_crosscompile_steps.txt  android_content.sql  android_crosscompile_steps.txt  build64_foma.sh  build64_readline.sh  build64_termcap.sh  build64_zlib.sh  createlib.sh  createlib64.sh  english.fst  english.lexc  hi.db  hi.y  local.properties  out.js
hi_android/assets/: assets.y  english.fst  hi.db
hi_android/foma/: createfsthu.sh  english.foma  english.foma.fst  english.fst  english.lexc  engnoun.lexc  json.foma  json.fst  json.lexc  magyar.foma  magyar.fst  magyar.lexc  magyar2.foma  magyarfnevek.lexc  savestack.sh  savestackhu.sh
hi_android/functors/: callengv_1.js  contact_1.js  contactengn_1.js  elsoutsohunnoun_1.js  firstlastengn_1.js  hivhunv_1.js  hogyhunconj_1.js  kereshunv_1.js  kuldhunv_1.js  listengv_1.js  nameengn_1.js  nehunneg_1.js  numeng_1.js  numhun_1.js  nyithunv_1.js  uzenhunv_1.js  withengprep_1.js  withengprep_1_o.js
hi_android/hi/: build.gradle  (+1 more)
hi_android/hi/app/: CMakeLists.txt  build.gradle
hi_android/hi/app/assets/: english.fst  hi.db
hi_android/hi/app/jni/: Android.mk  Application.mk  hilib.h  jhi.cpp  n_hilib.h  sqlite3.h  sqlite3ext.h
hi_android/hi/app/release/: output-metadata.json  output.json
hi_android/hi/app/src/androidTest/java/com/bitroller/hi/: ExampleInstrumentedTest.java
hi_android/hi/app/src/androidTest/java/com/bitroller/hi_qml/: ExampleInstrumentedTest.java
hi_android/hi/app/src/main/: AndroidManifest.xml
hi_android/hi/app/src/main/assets/: hi.db  o_hi.db
hi_android/hi/app/src/main/assets/www/: background.js  hi_qml_ui.html  hi_qml_ui.js  manifest.json  qmlwasm1.html  qmlwasm1.js
hi_android/hi/app/src/main/cpp/: db.h  db_factory.h  hi.cpp  hi_cvalue.cpp  hi_transcribe.cpp  js_db.cpp  js_transcriptor.h  lexer.cpp  lexer.h  logger.h  morphan.cpp  morphan.h  morphan_result.cpp  morphan_result.h  query_result.cpp  sh_transcriptor.cpp  sqlite_db.cpp  tokenpaths.cpp  transcriptor.h  transgraph.h
hi_android/hi/app/src/main/java/com/bitroller/hi/: AnalysisParser.java  DatabaseHelper.java  LanguageChecker.java  MainActivity.java  TelephonyInfo.java  huNumHandler.java  jsi.java
hi_android/hi/app/src/main/res/layout/: activity_main.xml
hi_android/hi/app/src/main/res/menu/: main.xml
hi_android/hi/app/src/main/res/values/: strings.xml
hi_android/hi/app/src/main/res/xml/: automotive_app_desc.xml  searchable.xml
hi_android/hi/app/src/test/java/com/bitroller/hi/: ExampleUnitTest.java
hi_android/hi/app/src/test/java/com/bitroller/hi_qml/: ExampleUnitTest.java
hi_desktop/: desktop_content.sql  english.fst  english.lexc  engnoun.lexc  hi-engmorph-foma-content.sql  hi.db  hi.y  hi_desktop.y  n_desktop_content.sql  o_desktop_content.sql  savestack.sh  script  y.tab.c
hi_js/: build_js.sh  build_networkfs_js.sh  build_nodefs_js.sh  createfst.sh  createlib_js.sh  createlib_networkfs_js.sh  createlib_nodefs_js.sh  emscripten_howto_compile_libarchive  english.foma  english.fst  english.lexc  engnoun.lexc  hi.bc  hi.c  hi.db  hi.html  hi.y  hi_js.bc  hi_js.c  hi_js.y  js_content.sql  savestack.sh  savestacken.sh  y.tab.c
ml/: build_prep_abl.sh  build_proc_abl.sh  corpus.txt  extract_grammar.txt  grammar_induction_by_Zaanen.pl  ize  ize_both.aligned  ize_both.clustered  ize_both.selected  prep_abl  prep_abl.cpp  proc_abl  proc_abl.cpp  test  test.aligned  test.clustered  test.selected
tests/: build_stax.sh  build_stex.sh  build_stix.sh  checkout.sh  stax  stax.cpp  stex  stex.cpp  stex_out.txt  stix  stix.cpp
tools/: mapr2r.cpp  stops2linebreaks.sh
(+41 files in other folders)
